# duckdb_filesystem

./: .gitignore  README.md  duckdb_pipeline.py  google_sheets_pipeline.py  pyproject.toml
.dlt/: .sources  config.toml
duckdb_source/: __init__.py
