[tool.poetry]
name = "duckdb-filesystem"
version = "0.1.0"
description = ""
authors = ["Violetta Mishechkina <sansiositres@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dlt = {extras = ["duckdb"], version = "^0.4.6"}
numpy = "^1.26.4"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
